...

    <!-- Contacts -->
    <string name="add_call_contact_number_to_contacts">Add %1$s?</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_new_password_optional">New password (optional)</string>
    <string name="prompt_new_password_repeat">Repeat new password</string>
    <string name="account_create_title">Create a Jami account</string>
    <string name="prompt_new_username">Enter new username</string>
    <string name="prompt_hint_username">Username</string>
    <string name="help_password_choose">Choose a strong password you will remember to protect your Jami account.</string>
    <string name="help_password_enter">Enter your main Jami account password.</string>
    <string name="help_server_enter">Enter URL of management server.</string>
    <string name="help_pin_enter">Enter the PIN from another configured Jami account. Use the \"export Jami account\" feature to obtain a PIN.</string>
...
    <!-- Wizard -->
    <string name="wizard_status_recommended">Recommended</string>
    <string name="wizard_status_optional">Optional</string>
    <string name="wizard_status_required">Required</string>
    <string name="wizard_username_info">Choose a username for your account</string>
    <string name="wizard_username_button">Choose Username</string>
    <string name="wizard_username_skip">Skip choosing username</string>
    <string name="wizard_password_info">Account password</string>
    <string name="wizard_password_placeholder">Choose a password to encrypt the account key on this device</string>
    <string name="wizard_password_button">Choose password</string>
    <string name="wizard_password_skip">Create account</string>
    <string name="wizard_password_switch">Encrypt account with password</string>
    <string name="wizard_password_warning">Note that the password cannot be recovered</string>
    <string name="wizard_profile_info">Profile is only shared with contacts</string>
    <string name="wizard_profile_button">Save Profile</string>
    <string name="wizard_profile_skip">Skip and do this later</string>
    <string name="fab_path_choose">Choose another file</string>
    <string name="chat_plugins">Chat Plugins</string>

    <!-- Bottom sheet -->
    <string name="bottomSheet_share_btn">Share</string>
    <string name="bottomSheet_dialpad_btn">Dialpad</string>
...
