<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="12dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:padding="5dp"
        tools:background="@drawable/settings_account_24"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="4dp"
        tools:text="@string/account_preferences_advanced_tab"/>

</LinearLayout>