...
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:elevation="@dimen/toolbar_elevation"-->
<!--        style="@style/Widget.MaterialComponents.AppBarLayout.Surface">-->

<!--        <com.google.android.material.appbar.MaterialToolbar-->
<!--            android:id="@+id/main_toolbar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minHeight="?attr/actionBarSize" />-->

<!--        <com.google.android.material.tabs.TabLayout-->
<!--            android:id="@+id/sliding_tabs"-->
...
